[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/ui/CrystalHUD.gd" type="Script" id=1]
[ext_resource path="res://asset/map-objects/pixellab/blue_crystal.png" type="Texture" id=2]
[ext_resource path="res://asset/map-objects/pixellab/green_crystal.png" type="Texture" id=3]
[ext_resource path="res://asset/map-objects/pixellab/purple_crystal.png" type="Texture" id=4]
[ext_resource path="res://asset/map-objects/pixellab/red_crystal.png" type="Texture" id=5]

[node name="CrystalHUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -240.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 30.0
custom_constants/separation = 10

[node name="BlueRow" type="HBoxContainer" parent="HBoxContainer"]
margin_right = 45.0
margin_bottom = 20.0
custom_constants/separation = 3

[node name="BlueIcon" type="TextureRect" parent="HBoxContainer/BlueRow"]
margin_right = 18.0
margin_bottom = 20.0
rect_min_size = Vector2( 18, 18 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="BlueLabel" type="Label" parent="HBoxContainer/BlueRow"]
margin_left = 21.0
margin_top = 3.0
margin_right = 45.0
margin_bottom = 17.0
rect_min_size = Vector2( 24, 0 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "0"
valign = 1

[node name="GreenRow" type="HBoxContainer" parent="HBoxContainer"]
margin_left = 55.0
margin_right = 100.0
margin_bottom = 20.0
custom_constants/separation = 3

[node name="GreenIcon" type="TextureRect" parent="HBoxContainer/GreenRow"]
margin_right = 18.0
margin_bottom = 20.0
rect_min_size = Vector2( 18, 18 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="GreenLabel" type="Label" parent="HBoxContainer/GreenRow"]
margin_left = 21.0
margin_top = 3.0
margin_right = 45.0
margin_bottom = 17.0
rect_min_size = Vector2( 24, 0 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "0"
valign = 1

[node name="PurpleRow" type="HBoxContainer" parent="HBoxContainer"]
margin_left = 110.0
margin_right = 155.0
margin_bottom = 20.0
custom_constants/separation = 3

[node name="PurpleIcon" type="TextureRect" parent="HBoxContainer/PurpleRow"]
margin_right = 18.0
margin_bottom = 20.0
rect_min_size = Vector2( 18, 18 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="PurpleLabel" type="Label" parent="HBoxContainer/PurpleRow"]
margin_left = 21.0
margin_top = 3.0
margin_right = 45.0
margin_bottom = 17.0
rect_min_size = Vector2( 24, 0 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "0"
valign = 1

[node name="RedRow" type="HBoxContainer" parent="HBoxContainer"]
margin_left = 165.0
margin_right = 210.0
margin_bottom = 20.0
custom_constants/separation = 3

[node name="RedIcon" type="TextureRect" parent="HBoxContainer/RedRow"]
margin_right = 18.0
margin_bottom = 20.0
rect_min_size = Vector2( 18, 18 )
texture = ExtResource( 5 )
expand = true
stretch_mode = 6

[node name="RedLabel" type="Label" parent="HBoxContainer/RedRow"]
margin_left = 21.0
margin_top = 3.0
margin_right = 45.0
margin_bottom = 17.0
rect_min_size = Vector2( 24, 0 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "0"
valign = 1
